k8s/example.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod-2 # spacje, zamiast tabów - zwykle dwie spacje
  labels:
    app: web-1
    zone: prod-1
    version: v1-1
